--- a/package.json
+++ b/package.json
@@ -11,22 +11,29 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-react-native-web": "^0.0.19",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "^0.70.6",
+    "react-native-web": "^0.18.10",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@storybook/addon-actions": "^5.3",
     "@storybook/addon-knobs": "^5.3",
-    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-links": "^6.5.15",
     "@storybook/addon-ondevice-actions": "^5.3.23",
     "@storybook/addon-ondevice-knobs": "^5.3.26",
     "@storybook/react-native": "^5.3.27",
     "@storybook/react-native-server": "^5.3.23",
     "babel-loader": "^8.3.0",
-    "react-dom": "18.1.0"
+    "react-dom": "^18.2.0"
   },
   "private": true
 }
